--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.27.0",
     "next": "9.5.3",
     "next-seo": "^4.7.3",
+    "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-markdown": "^4.3.1",
