--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "9.5.3",
     "next-seo": "^4.7.3",
     "react": "16.13.1",
+    "react-adsense": "^0.1.0",
     "react-dom": "16.13.1",
     "react-markdown": "^4.3.1",
     "react-redux": "^7.2.1",
